--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-first
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Andika Bahari</title>
+  </head>
+  <body>
+    <h3>Welcome</h3>
+  </body>
+</html>
